Added a kernel name to the Kernel and a way of retrieving a Kernel by that name
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45003 13f79535-47bb-0310-9956-ffa450edef68